// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Manifest examples adaptive: .wrap { @include adaptive(16px); } 1`] = `
".wrap {
  margin: 0 auto;
}
@media (min-width: 576px) {
  .wrap {
    max-width: calc(576px - 16px * 2);
  }
}
@media (min-width: 768px) {
  .wrap {
    max-width: calc(768px - 16px * 2);
  }
}
@media (min-width: 992px) {
  .wrap {
    max-width: calc(992px - 16px * 2);
  }
}
@media (min-width: 1200px) {
  .wrap {
    max-width: calc(1200px - 16px * 2);
  }
}
@media (min-width: 1400px) {
  .wrap {
    max-width: calc(1400px - 16px * 2);
  }
}"
`;

exports[`Manifest examples adaptive: .wrap { @include adaptive; } 1`] = `
".wrap {
  margin: 0 auto;
}
@media (min-width: 576px) {
  .wrap {
    max-width: calc(576px - 30px * 2);
  }
}
@media (min-width: 768px) {
  .wrap {
    max-width: calc(768px - 30px * 2);
  }
}
@media (min-width: 992px) {
  .wrap {
    max-width: calc(992px - 30px * 2);
  }
}
@media (min-width: 1200px) {
  .wrap {
    max-width: calc(1200px - 30px * 2);
  }
}
@media (min-width: 1400px) {
  .wrap {
    max-width: calc(1400px - 30px * 2);
  }
}"
`;

exports[`Manifest examples after: .a { @include after { content: "x"; } } 1`] = `
":where(.a)::after {
  content: "";
}
.a::after {
  content: "x";
}"
`;

exports[`Manifest examples after: .a { @include after("data-label") { color: red; } } 1`] = `
".a::after {
  content: attr(data-label);
  color: red;
}"
`;

exports[`Manifest examples after: .a { @include after("→") { color: red; } } 1`] = `
"@charset "UTF-8";
.a::after {
  content: "→";
  color: red;
}"
`;

exports[`Manifest examples after: .a { @include after(attr(data-label)) { color: red; } } 1`] = `
".a::after {
  content: attr(data-label);
  color: red;
}"
`;

exports[`Manifest examples after: .a { @include after(var(--label)) { color: red; } } 1`] = `
".a::after {
  content: var(--label);
  color: red;
}"
`;

exports[`Manifest examples after: .badge { @include after { display: block; width: 8px; height: 8px; bor 1`] = `
":where(.badge)::after {
  content: "";
}
.badge::after {
  display: block;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background: red;
}"
`;

exports[`Manifest examples all-buttons: .toolbar { @include all-buttons { border-radius: 6px; } } 1`] = `
".toolbar button, .toolbar input[type=button], .toolbar input[type=reset], .toolbar input[type=submit], .toolbar input[type=image] {
  border-radius: 6px;
}"
`;

exports[`Manifest examples all-buttons: @include all-buttons { cursor: pointer; } 1`] = `
"button, input[type=button], input[type=reset], input[type=submit], input[type=image] {
  cursor: pointer;
}"
`;

exports[`Manifest examples all-buttons: @include all-buttons("focus-visible") { outline: 2px solid; outline-of 1`] = `
"button:focus-visible, input[type=button]:focus-visible, input[type=reset]:focus-visible, input[type=submit]:focus-visible, input[type=image]:focus-visible {
  outline: 2px solid;
  outline-offset: 2px;
}"
`;

exports[`Manifest examples all-buttons: @include all-buttons("hover") { opacity: 0.8; } 1`] = `
"button:hover, input[type=button]:hover, input[type=reset]:hover, input[type=submit]:hover, input[type=image]:hover {
  opacity: 0.8;
}"
`;

exports[`Manifest examples all-text-inputs: .search-bar { @include all-text-inputs { border: 0; } } 1`] = `
".search-bar :where(input):not([type=button], [type=checkbox], [type=color], [type=file], [type=hidden], [type=image], [type=radio], [type=range], [type=reset], [type=submit]), .search-bar textarea {
  border: 0;
}"
`;

exports[`Manifest examples all-text-inputs: @include all-text-inputs { border: 1px solid; } 1`] = `
":where(input):not([type=button], [type=checkbox], [type=color], [type=file], [type=hidden], [type=image], [type=radio], [type=range], [type=reset], [type=submit]), textarea {
  border: 1px solid;
}"
`;

exports[`Manifest examples all-text-inputs: @include all-text-inputs("focus") { outline: 2px solid; } 1`] = `
":where(input):not([type=button], [type=checkbox], [type=color], [type=file], [type=hidden], [type=image], [type=radio], [type=range], [type=reset], [type=submit]):focus, textarea:focus {
  outline: 2px solid;
}"
`;

exports[`Manifest examples all-text-inputs: @include all-text-inputs("focus-visible") { outline: 2px solid; } 1`] = `
":where(input):not([type=button], [type=checkbox], [type=color], [type=file], [type=hidden], [type=image], [type=radio], [type=range], [type=reset], [type=submit]):focus-visible, textarea:focus-visible {
  outline: 2px solid;
}"
`;

exports[`Manifest examples all-text-inputs: @include all-text-inputs("user-invalid") { border-color: crimson; } 1`] = `
":where(input):not([type=button], [type=checkbox], [type=color], [type=file], [type=hidden], [type=image], [type=radio], [type=range], [type=reset], [type=submit]):user-invalid, textarea:user-invalid {
  border-color: crimson;
}"
`;

exports[`Manifest examples antialias: .a { @include antialias("only"); } 1`] = `
".a, .a::before, .a::after {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}"
`;

exports[`Manifest examples antialias: .a { @include antialias; } 1`] = `
".a {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}
:where(.a)::before, :where(.a)::after, :where(.a) *, :where(.a) *::before, :where(.a) *::after {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}"
`;

exports[`Manifest examples antialias: @include antialias; 1`] = `
"*,
*::before,
*::after {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}"
`;

exports[`Manifest examples aspect-ratio: .a { @include aspect-ratio(var(--ratio)); } 1`] = `
".a {
  display: block;
  width: 100%;
  aspect-ratio: var(--ratio);
  border: 0;
  object-fit: cover;
}
:where(.a) {
  height: auto;
}"
`;

exports[`Manifest examples aspect-ratio: .default { @include aspect-ratio; } 1`] = `
".default {
  display: block;
  width: 100%;
  aspect-ratio: 16 / 9;
  border: 0;
  object-fit: cover;
}
:where(.default) {
  height: auto;
}"
`;

exports[`Manifest examples aspect-ratio: .plain { @include aspect-ratio(1.5, null); } 1`] = `
".plain {
  display: block;
  width: 100%;
  aspect-ratio: 1.5;
  border: 0;
}
:where(.plain) {
  height: auto;
}"
`;

exports[`Manifest examples aspect-ratio: .thumb { @include aspect-ratio("16:9"); } 1`] = `
".thumb {
  display: block;
  width: 100%;
  aspect-ratio: 16 / 9;
  border: 0;
  object-fit: cover;
}
:where(.thumb) {
  height: auto;
}"
`;

exports[`Manifest examples aspect-ratio: .tile { @include aspect-ratio("1:1", contain); } 1`] = `
".tile {
  display: block;
  width: 100%;
  aspect-ratio: 1 / 1;
  border: 0;
  object-fit: contain;
}
:where(.tile) {
  height: auto;
}"
`;

exports[`Manifest examples aspect-ratio: .video { @include aspect-ratio("16/9"); } 1`] = `
".video {
  display: block;
  width: 100%;
  aspect-ratio: 16 / 9;
  border: 0;
  object-fit: cover;
}
:where(.video) {
  height: auto;
}"
`;

exports[`Manifest examples auto-grid: .cards { @include auto-grid(10rem, 1rem, 4); } 1`] = `
".cards {
  display: grid;
  gap: 1rem;
  grid-template-columns: repeat(auto-fit, minmax(min(100%, max(10rem, (100% - 3 * 1rem) / 4)), 1fr));
}"
`;

exports[`Manifest examples auto-grid: .cards { @include auto-grid(15rem, 1rem, $fill: true); } 1`] = `
".cards {
  display: grid;
  gap: 1rem;
  grid-template-columns: repeat(auto-fill, minmax(min(100%, 15rem), 1fr));
}"
`;

exports[`Manifest examples auto-grid: .cards { @include auto-grid(20rem, 1.5rem); } 1`] = `
".cards {
  display: grid;
  gap: 1.5rem;
  grid-template-columns: repeat(auto-fit, minmax(min(100%, 20rem), 1fr));
}"
`;

exports[`Manifest examples auto-grid: .cards { @include auto-grid(var(--card-min), var(--grid-gap)); } 1`] = `
".cards {
  display: grid;
  gap: var(--grid-gap);
  grid-template-columns: repeat(auto-fit, minmax(min(100%, var(--card-min)), 1fr));
}"
`;

exports[`Manifest examples auto-grid: .cards { @include auto-grid; } 1`] = `
".cards {
  display: grid;
  gap: 1rem;
  grid-template-columns: repeat(auto-fit, minmax(min(100%, 16rem), 1fr));
}"
`;

exports[`Manifest examples background-image: .a { @include background-image("/img/a.png"); } 1`] = `
".a {
  background-image: url("/img/a.png");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}"
`;

exports[`Manifest examples background-image: .a { @include background-image("/img/a.png", (red, blue), "top"); } 1`] = `
".a {
  background-image: linear-gradient(to top, red, blue), url("/img/a.png");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}"
`;

exports[`Manifest examples background-image: .a { @include background-image("/img/a.png", rgba(0,0,0,0.5)); } 1`] = `
".a {
  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("/img/a.png");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}"
`;

exports[`Manifest examples background-image: .a { @include background-image(image-set("/img/a.png" 1x, "/img/a@2x.p 1`] = `
".a {
  background-image: image-set("/img/a.png" 1x, "/img/a@2x.png" 2x);
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}"
`;

exports[`Manifest examples background-image: .a { @include background-image(var(--hero), rgba(0,0,0,0.5)); } 1`] = `
".a {
  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), var(--hero);
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(brick, $color: #b91c1c #7f1d1d, $back 1`] = `
".a {
  background-image: linear-gradient(335deg, #b91c1c 19.0344827586px, #0000 0), linear-gradient(155deg, #7f1d1d 19.0344827586px, #0000 0), linear-gradient(335deg, #b91c1c 19.0344827586px, #0000 0), linear-gradient(155deg, #7f1d1d 19.0344827586px, #0000 0);
  background-size: 48px 48px, 48px 48px, 48px 48px, 48px 48px;
  background-position: 0 1.6551724138px, 3.3103448276px 28.9655172414px, 24px 25.6551724138px, 28.1379310345px 4.9655172414px;
  background-repeat: repeat;
  background-color: #fee2e2;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(checkerboard, $color: #111 #eee, $siz 1`] = `
".a {
  background-image: repeating-conic-gradient(#111 0 25%, #eee 0 50%);
  background-size: 24px 24px;
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(chevron, $color: #0ea5e9, $background 1`] = `
".a {
  background-image: conic-gradient(from -45deg at 50% 25%, #0ea5e9 90deg, #0000 0), conic-gradient(from -45deg at 50% 75%, #0ea5e9 90deg, #0000 0);
  background-size: 2rem 2rem, 2rem 2rem;
  background-repeat: repeat;
  background-color: #e0f2fe;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(concentric, $color: #0f766e, $size: 3 1`] = `
".a {
  background-image: repeating-radial-gradient(circle at 15% 110%, #0f766e 0 1px, #0000 1px 30px);
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(concentric, $color: #be123c, $backgro 1`] = `
".a {
  background-image: repeating-radial-gradient(circle at 50% 50%, #be123c 0 2px, #0000 2px 16px);
  background-repeat: repeat;
  background-color: #fff1f2;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(crosshatch, $size: 20px, $angle: 30de 1`] = `
".a {
  background-image: repeating-linear-gradient(30deg, color-mix(in oklab, currentColor 12%, transparent) 0 2.5px, #0000 0 20px), repeating-linear-gradient(-30deg, color-mix(in oklab, currentColor 6%, transparent) 0 2.5px, #0000 0 20px);
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(dots); } 1`] = `
".a {
  background-image: radial-gradient(color-mix(in oklab, currentColor 12%, transparent) 0.2rem, #0000 0), radial-gradient(color-mix(in oklab, currentColor 6%, transparent) 0.2rem, #0000 0);
  background-size: 2rem 2rem, 2rem 2rem;
  background-position: 0 0, 1rem 1rem;
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(dots, $color: #94a3b8, $size: 18px, $ 1`] = `
".a {
  background-image: radial-gradient(#94a3b8 1.8px, #0000 0);
  background-size: 18px 18px;
  background-position: 0 0;
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(dots, $color: rgb(255 255 255 / 0.5), 1`] = `
".a {
  background-image: radial-gradient(rgba(255, 255, 255, 0.5) 2.2px, #0000 0), radial-gradient(rgba(255, 255, 255, 0.5) 2.2px, #0000 0), url(/img/a.png);
  background-size: 22px 22px, 22px 22px, cover;
  background-position: 0 0, 11px 11px, center;
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(dots, $size: var(--tile), $color: var 1`] = `
".a {
  background-image: radial-gradient(var(--ink) calc(var(--tile) * 0.1), #0000 0), radial-gradient(var(--ink) calc(var(--tile) * 0.1), #0000 0);
  background-size: var(--tile) var(--tile), var(--tile) var(--tile);
  background-position: 0 0, calc(var(--tile) * 0.5) calc(var(--tile) * 0.5);
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(gingham, $color: #1d4ed8, $size: 40px 1`] = `
".a {
  background-image: repeating-linear-gradient(90deg, color-mix(in srgb, #1d4ed8 55%, transparent) 0 20px, #0000 0 40px), repeating-linear-gradient(0deg, color-mix(in srgb, #1d4ed8 55%, transparent) 0 20px, #0000 0 40px);
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(glow, $color: #2d4c71 #0b1220, $backg 1`] = `
".a {
  background-image: radial-gradient(80% 70% at 0% 100%, #2d4c71 0%, #0b1220 45%, #0000 100%);
  background-repeat: repeat;
  background-color: #0b1220;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(glow, $color: #bccbff #e6ecff, $backg 1`] = `
".a {
  background-image: radial-gradient(90% 80% at 50% 100%, #bccbff 0%, #e6ecff 45%, #0000 100%);
  background-repeat: repeat;
  background-color: #f8fafc;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(grid, $axis: block, $color: #bae6fd,  1`] = `
".a {
  background-image: linear-gradient(#bae6fd 1px, #0000 0);
  background-size: 1.75rem 1.75rem;
  background-position: -0.5px -0.5px;
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(grid, $color: #cbd5e1 #94a3b8, $size: 1`] = `
".a {
  background-image: linear-gradient(90deg, #94a3b8 2px, #0000 0), linear-gradient(#94a3b8 2px, #0000 0), linear-gradient(90deg, #cbd5e1 1px, #0000 0), linear-gradient(#cbd5e1 1px, #0000 0);
  background-size: 7.5rem 7.5rem, 7.5rem 7.5rem, 1.5rem 1.5rem, 1.5rem 1.5rem;
  background-position: -1px -1px, -1px -1px, -0.5px -0.5px, -0.5px -0.5px;
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(harlequin, $color: #0f766e, $backgrou 1`] = `
".a {
  background-image: linear-gradient(45deg, #0f766e 25%, #0000 0 75%, #0f766e 0), linear-gradient(-45deg, #0f766e 25%, #0000 0 75%, #0f766e 0);
  background-size: 44px 44px, 44px 44px;
  background-repeat: repeat;
  background-color: #ccfbf1;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(honeycomb, $color: #fbbf24 #f59e0b #b 1`] = `
".a {
  background-image: repeating-conic-gradient(from 30deg, #0000 0 120deg, #b45309 0 180deg), repeating-conic-gradient(from 30deg, #fbbf24 0 60deg, #f59e0b 0 120deg, #b45309 0 180deg);
  background-size: 30px 17.320509px, 30px 17.320509px;
  background-position: 15px 8.660253px, 0 0;
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(houndstooth, $color: #111 #fff, $size 1`] = `
".a {
  background-image: linear-gradient(-45deg, #fff 25%, #0000 25% 75%, #111 75%), linear-gradient(-45deg, #111 25%, #0000 25% 75%, #fff 75%), linear-gradient(45deg, #111 17%, #0000 17% 25%, #111 25% 36%, #0000 36% 64%, #111 64% 75%, #0000 75% 83%, #111 83%);
  background-size: 36px 36px, 36px 36px, 36px 36px;
  background-position: 0 0, 18px 18px, 18px 18px;
  background-repeat: repeat;
  background-color: #fff;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(isometric, $color: #a78bfa #7c3aed #4 1`] = `
".a {
  background-image: conic-gradient(from 0deg at calc(500% / 6) calc(100% / 3), #4c1d95 0 120deg, #0000 0), conic-gradient(from -120deg at calc(100% / 6) calc(100% / 3), #7c3aed 0 120deg, #0000 0), conic-gradient(from 120deg at calc(100% / 3) calc(500% / 6), #a78bfa 0 120deg, #0000 0), conic-gradient(from 120deg at calc(200% / 3) calc(500% / 6), #a78bfa 0 120deg, #0000 0), conic-gradient(from -180deg at calc(100% / 3) 50%, #7c3aed 60deg, #a78bfa 0 120deg, #0000 0), conic-gradient(from 60deg at calc(200% / 3) 50%, #a78bfa 60deg, #4c1d95 0 120deg, #0000 0), conic-gradient(from -60deg at 50% calc(100% / 3), #a78bfa 120deg, #7c3aed 0 240deg, #4c1d95 0);
  background-size: 55.4256256px 32px;
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(mesh, $color: #7c3aed #0ea5e9 #f43f5e 1`] = `
".a {
  background-image: radial-gradient(at 18% 22%, #7c3aed 0px, #0000 55%), radial-gradient(at 82% 18%, #0ea5e9 0px, #0000 55%), radial-gradient(at 70% 82%, #f43f5e 0px, #0000 55%), radial-gradient(at 25% 85%, #22c55e 0px, #0000 55%);
  background-repeat: repeat;
  background-color: #0b1220;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(mesh, $color: #f0abfc #67e8f9 #fdba74 1`] = `
".a {
  background-image: radial-gradient(at 20% 25%, #f0abfc 0px, #0000 55%), radial-gradient(at 80% 20%, #67e8f9 0px, #0000 55%), radial-gradient(at 65% 80%, #fdba74 0px, #0000 55%);
  background-repeat: repeat;
  background-color: #faf5ff;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(stripes, $color: #2563eb, $size: 24px 1`] = `
".a {
  background-image: repeating-linear-gradient(-45deg, #2563eb 0px 3px, #0000 3px 24px);
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(stripes, $color: rgb(15 23 42 / 0.5), 1`] = `
".a {
  background-image: repeating-linear-gradient(315deg, rgba(15, 23, 42, 0.5) 0px 1px, #0000 1px 10px);
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(sunburst, $color: #b45309, $backgroun 1`] = `
".a {
  background-image: repeating-conic-gradient(from 0deg at 50% 50%, #b45309 0 6deg, #0000 0 12deg);
  background-repeat: repeat;
  background-color: #fffbeb;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(sunburst, $color: #f59e0b, $angle: 4d 1`] = `
".a {
  background-image: repeating-conic-gradient(from 0deg at 50% 0%, #f59e0b 0 4deg, #0000 0 8deg);
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(sunburst, $color: rgb(29 78 216 / 0.3 1`] = `
".a {
  background-image: repeating-conic-gradient(from 0deg at 50% 50%, rgba(29, 78, 216, 0.3) 0 3deg, #0000 0 6deg);
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(triangles, $color: #16a34a, $size: 28 1`] = `
".a {
  background-image: conic-gradient(from -135deg, #16a34a 90deg, #0000 0);
  background-size: 28px 28px;
  background-repeat: repeat;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(vignette, $color: rgb(2 6 23 / 0.75), 1`] = `
".a {
  background-image: radial-gradient(90% 80% at 50% 50%, #0000 40%, rgba(2, 6, 23, 0.75) 100%);
  background-repeat: repeat;
  background-color: #1e293b;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(waves, $color: #0ea5e9, $background:  1`] = `
".a {
  background-image: radial-gradient(circle at 50% 100%, #0ea5e9 45%, #0000 46%);
  background-size: 32px 32px;
  background-repeat: repeat;
  background-color: #e0f2fe;
}"
`;

exports[`Manifest examples background-pattern: .a { @include background-pattern(zigzag, $color: #f97316, $background: 1`] = `
".a {
  background-image: linear-gradient(135deg, #f97316 25%, #0000 0), linear-gradient(225deg, #f97316 25%, #0000 0), linear-gradient(315deg, #f97316 25%, #0000 0), linear-gradient(45deg, #f97316 25%, #0000 0);
  background-size: 28px 28px, 28px 28px, 28px 28px, 28px 28px;
  background-position: -14px 0, -14px 0, 0 0, 0 0;
  background-repeat: repeat;
  background-color: #fff7ed;
}"
`;

exports[`Manifest examples before: .a { @include before("data-label") { color: red; } } 1`] = `
".a::before {
  content: attr(data-label);
  color: red;
}"
`;

exports[`Manifest examples before: .a { @include before("→") { color: red; } } 1`] = `
"@charset "UTF-8";
.a::before {
  content: "→";
  color: red;
}"
`;

exports[`Manifest examples before: .a { @include before(var(--label)) { color: red; } } 1`] = `
".a::before {
  content: var(--label);
  color: red;
}"
`;

exports[`Manifest examples before: .badge { @include before { display: block; width: 8px; height: 8px; bo 1`] = `
":where(.badge)::before {
  content: "";
}
.badge::before {
  display: block;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background: red;
}"
`;

exports[`Manifest examples border-box: .a { @include border-box("only"); } 1`] = `
".a, .a::before, .a::after {
  box-sizing: border-box;
}"
`;

exports[`Manifest examples border-box: .a { @include border-box; } 1`] = `
".a {
  box-sizing: border-box;
}
:where(.a)::before, :where(.a)::after, :where(.a) *, :where(.a) *::before, :where(.a) *::after {
  box-sizing: border-box;
}"
`;

exports[`Manifest examples border-box: @include border-box; 1`] = `
"*,
*::before,
*::after {
  box-sizing: border-box;
}"
`;

exports[`Manifest examples border-radius: .a { @include border-radius("top", 8px); } 1`] = `
".a {
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}"
`;

exports[`Manifest examples border-radius: .a { @include border-radius(1px, 2px, 3px, 4px); } 1`] = `
".a {
  border-top-left-radius: 1px;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 3px;
  border-bottom-left-radius: 4px;
}"
`;

exports[`Manifest examples border-radius: .a { @include border-radius(8px); } 1`] = `
".a {
  border-radius: 8px;
}"
`;

exports[`Manifest examples border-radius: .bubble { @include border-radius("end-end", 12px); } 1`] = `
".bubble {
  border-end-end-radius: 12px;
}"
`;

exports[`Manifest examples border-radius: .tab { @include border-radius("inline-start", 8px); } 1`] = `
".tab {
  border-start-start-radius: 8px;
  border-end-start-radius: 8px;
}"
`;

exports[`Manifest examples brand-logo: .logo { @include brand-logo(120px, 40px, "/img/logo.svg"); } 1`] = `
".logo {
  display: inline-block;
  position: relative;
  width: 120px;
  height: 40px;
  background-image: url("/img/logo.svg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: 100%;
}
.logo a {
  display: block;
  width: 1px;
  height: 1px;
  overflow: hidden;
  text-indent: 100%;
}
.logo a::after {
  content: "";
  position: absolute;
  pointer-events: auto;
  inset: 0;
  z-index: 1;
}"
`;

exports[`Manifest examples brand-logo: .logo { @include brand-logo(120px, 40px, var(--logo)); } 1`] = `
".logo {
  display: inline-block;
  position: relative;
  width: 120px;
  height: 40px;
  background-image: var(--logo);
  background-position: center;
  background-repeat: no-repeat;
  background-size: 100%;
}
.logo a {
  display: block;
  width: 1px;
  height: 1px;
  overflow: hidden;
  text-indent: 100%;
}
.logo a::after {
  content: "";
  position: absolute;
  pointer-events: auto;
  inset: 0;
  z-index: 1;
}"
`;

exports[`Manifest examples breakpoint: .a { @include breakpoint("between", "medium" "large") { color: red; }  1`] = `
"@media (min-width: 768px) and (max-width: 991.98px) {
  .a {
    color: red;
  }
}"
`;

exports[`Manifest examples breakpoint: .a { @include breakpoint("max", "medium") { color: red; } } 1`] = `
"@media (max-width: 767.98px) {
  .a {
    color: red;
  }
}"
`;

exports[`Manifest examples breakpoint: .a { @include breakpoint("min", "medium") { color: red; } } 1`] = `
"@media (min-width: 768px) {
  .a {
    color: red;
  }
}"
`;

exports[`Manifest examples breakpoint: .a { @include breakpoint("only", "medium") { color: red; } } 1`] = `
"@media (width: 768px) {
  .a {
    color: red;
  }
}"
`;

exports[`Manifest examples breakpointer: .a { @include breakpointer; } 1`] = `
"@media (min-width: 0) {
  .a::before {
    content: "xsmall";
  }
}
@media (min-width: 576px) {
  .a::before {
    content: "small";
  }
}
@media (min-width: 768px) {
  .a::before {
    content: "medium";
  }
}
@media (min-width: 992px) {
  .a::before {
    content: "large";
  }
}
@media (min-width: 1200px) {
  .a::before {
    content: "xlarge";
  }
}
@media (min-width: 1400px) {
  .a::before {
    content: "xxl";
  }
}"
`;

exports[`Manifest examples breakpointer: @include breakpointer; 1`] = `
"@media (min-width: 0) {
  body::before {
    content: "xsmall";
  }
}
@media (min-width: 576px) {
  body::before {
    content: "small";
  }
}
@media (min-width: 768px) {
  body::before {
    content: "medium";
  }
}
@media (min-width: 992px) {
  body::before {
    content: "large";
  }
}
@media (min-width: 1200px) {
  body::before {
    content: "xlarge";
  }
}
@media (min-width: 1400px) {
  body::before {
    content: "xxl";
  }
}"
`;

exports[`Manifest examples center: .bar { @include center("horizontal"); } 1`] = `
".bar {
  left: 50%;
  translate: -50% 0;
}"
`;

exports[`Manifest examples center: .modal { @include center; } 1`] = `
".modal {
  top: 50%;
  left: 50%;
  translate: -50% -50%;
}"
`;

exports[`Manifest examples center: .stripe { @include center("vertical"); } 1`] = `
".stripe {
  top: 50%;
  translate: 0 -50%;
}"
`;

exports[`Manifest examples circle: .dot { @include circle(24px); } 1`] = `
".dot {
  width: 24px;
  height: 24px;
  display: inline-block;
  border-radius: 100%;
}"
`;

exports[`Manifest examples clearUnit: .a { line-height: clearUnit(24px); } 1`] = `
".a {
  line-height: 24;
}"
`;

exports[`Manifest examples clearWhitespace: .a { content: clearWhitespace("a b c"); } 1`] = `
".a {
  content: "abc";
}"
`;

exports[`Manifest examples columnizer: .grid { @include columnizer(#{3}, 0); } 1`] = `
".grid {
  display: flex;
  flex-wrap: wrap;
  gap: 0px;
  box-sizing: border-box;
}
.grid > * {
  box-sizing: border-box;
  flex-grow: 0;
  flex-shrink: 0;
  min-inline-size: 0;
  flex-basis: calc((100% - (3 - 1) * 0px) / 3);
}
:where(.grid)::before, :where(.grid)::after, :where(.grid) *, :where(.grid) *::before, :where(.grid) *::after {
  box-sizing: border-box;
}"
`;

exports[`Manifest examples columnizer: .grid { @include columnizer(3); } 1`] = `
".grid {
  display: flex;
  flex-wrap: wrap;
  gap: 0;
  box-sizing: border-box;
}
.grid > * {
  box-sizing: border-box;
  flex-grow: 0;
  flex-shrink: 0;
  min-inline-size: 0;
  flex-basis: calc(100% / 3);
}
:where(.grid)::before, :where(.grid)::after, :where(.grid) *, :where(.grid) *::before, :where(.grid) *::after {
  box-sizing: border-box;
}"
`;

exports[`Manifest examples columnizer: .grid { @include columnizer(3, 20px); } 1`] = `
".grid {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  box-sizing: border-box;
}
.grid > * {
  box-sizing: border-box;
  flex-grow: 0;
  flex-shrink: 0;
  min-inline-size: 0;
  flex-basis: calc((100% - (3 - 1) * 20px) / 3);
}
:where(.grid)::before, :where(.grid)::after, :where(.grid) *, :where(.grid) *::before, :where(.grid) *::after {
  box-sizing: border-box;
}"
`;

exports[`Manifest examples columnizer: .grid { @include columnizer(3, 20px, true); } 1`] = `
".grid {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  box-sizing: border-box;
}
.grid > * {
  box-sizing: border-box;
  flex-grow: 1;
  flex-shrink: 0;
  min-inline-size: 0;
  flex-basis: calc((100% - (3 - 1) * 20px) / 3);
}
:where(.grid)::before, :where(.grid)::after, :where(.grid) *, :where(.grid) *::before, :where(.grid) *::after {
  box-sizing: border-box;
}"
`;

exports[`Manifest examples columnizer: .grid { @include columnizer(3, var(--gap)); } 1`] = `
".grid {
  display: flex;
  flex-wrap: wrap;
  gap: var(--gap);
  box-sizing: border-box;
}
.grid > * {
  box-sizing: border-box;
  flex-grow: 0;
  flex-shrink: 0;
  min-inline-size: 0;
  flex-basis: calc((100% - (3 - 1) * var(--gap)) / 3);
}
:where(.grid)::before, :where(.grid)::after, :where(.grid) *, :where(.grid) *::before, :where(.grid) *::after {
  box-sizing: border-box;
}"
`;

exports[`Manifest examples columnizer: .grid { @include columnizer(var(--cols)); } 1`] = `
".grid {
  display: flex;
  flex-wrap: wrap;
  gap: 0;
  box-sizing: border-box;
}
.grid > * {
  box-sizing: border-box;
  flex-grow: 0;
  flex-shrink: 0;
  min-inline-size: 0;
  flex-basis: calc(100% / var(--cols));
}
:where(.grid)::before, :where(.grid)::after, :where(.grid) *, :where(.grid) *::before, :where(.grid) *::after {
  box-sizing: border-box;
}"
`;

exports[`Manifest examples columnizer: .grid { @include columnizer(var(--cols), 1.5rem); } 1`] = `
".grid {
  display: flex;
  flex-wrap: wrap;
  gap: 1.5rem;
  box-sizing: border-box;
}
.grid > * {
  box-sizing: border-box;
  flex-grow: 0;
  flex-shrink: 0;
  min-inline-size: 0;
  flex-basis: calc((100% - (var(--cols) - 1) * 1.5rem) / var(--cols));
}
:where(.grid)::before, :where(.grid)::after, :where(.grid) *, :where(.grid) *::before, :where(.grid) *::after {
  box-sizing: border-box;
}"
`;

exports[`Manifest examples container: .card { @include container("card"); } 1`] = `
".card {
  container-type: inline-size;
  container-name: card;
}"
`;

exports[`Manifest examples container: .panel { @include container(null, size); } 1`] = `
".panel {
  container-type: size;
}"
`;

exports[`Manifest examples container: .panel { @include container; } 1`] = `
".panel {
  container-type: inline-size;
}"
`;

exports[`Manifest examples container-query: .title { @include container-query("between", 300px 500px) { color: red 1`] = `
"@container (min-width: 300px) and (max-width: 500px) {
  .title {
    color: red;
  }
}"
`;

exports[`Manifest examples container-query: .title { @include container-query("max", 399px) { font-size: 1rem; } } 1`] = `
"@container (max-width: 399px) {
  .title {
    font-size: 1rem;
  }
}"
`;

exports[`Manifest examples container-query: .title { @include container-query("min", "medium") { color: red; } } 1`] = `
"@container (min-width: 768px) {
  .title {
    color: red;
  }
}"
`;

exports[`Manifest examples container-query: .title { @include container-query("min", 400px) { font-size: 2rem; } } 1`] = `
"@container (min-width: 400px) {
  .title {
    font-size: 2rem;
  }
}"
`;

exports[`Manifest examples container-query: .title { @include container-query("min", 400px, $name: "card") { color 1`] = `
"@container card (min-width: 400px) {
  .title {
    color: red;
  }
}"
`;

exports[`Manifest examples container-query: .title { @include container-query("only", 400px) { color: red; } } 1`] = `
"@container (width: 400px) {
  .title {
    color: red;
  }
}"
`;

exports[`Manifest examples container-query: .title { @include container-query("small", "medium") { color: red; } } 1`] = `
"@container (min-width: 576px) and (width < 768px) {
  .title {
    color: red;
  }
}"
`;

exports[`Manifest examples container-query: .title { @include container-query(300px, 500px) { color: red; } } 1`] = `
"@container (min-width: 300px) and (max-width: 500px) {
  .title {
    color: red;
  }
}"
`;

exports[`Manifest examples convertToEm: .a { margin: convertToEm(24px) * 2; } 1`] = `
".a {
  margin: 3em;
}"
`;

exports[`Manifest examples convertToEm: .a { margin: convertToEm(24px); } 1`] = `
".a {
  margin: 1.5em;
}"
`;

exports[`Manifest examples convertToNumber: .a { z-index: convertToNumber("42"); } 1`] = `
".a {
  z-index: 42;
}"
`;

exports[`Manifest examples counter: .chapter-2 { @include counter("Step", decimal, $start: 4); } 1`] = `
".chapter-2 {
  counter-reset: glsCounter;
}
.chapter-2 > * {
  counter-increment: glsCounter;
}
.chapter-2 > *:first-child {
  counter-set: glsCounter 4;
}
.chapter-2 > *::before {
  content: "Step" counter(glsCounter, decimal);
}"
`;

exports[`Manifest examples counter: .list { @include counter("(", "decimal", ")"); } 1`] = `
".list {
  counter-reset: glsCounter;
}
.list > * {
  counter-increment: glsCounter;
}
.list > *::before {
  content: "(" counter(glsCounter, decimal)  ")";
}"
`;

exports[`Manifest examples counter: .list { @include counter("."); } 1`] = `
".list {
  counter-reset: glsCounter;
}
.list > * {
  counter-increment: glsCounter;
}
.list > *::before {
  content: counter(glsCounter)  ".";
}"
`;

exports[`Manifest examples counter: .list { @include counter("decimal"); } 1`] = `
".list {
  counter-reset: glsCounter;
}
.list > * {
  counter-increment: glsCounter;
}
.list > *::before {
  content: counter(glsCounter, decimal);
}"
`;

exports[`Manifest examples counter: .list { @include counter(decimal-leading-zero, $name: tips); } 1`] = `
".list {
  counter-reset: tips;
}
.list > * {
  counter-increment: tips;
}
.list > *::before {
  content: counter(tips, decimal-leading-zero);
}"
`;

exports[`Manifest examples counter: .list { @include counter(var(--prefix), "decimal"); } 1`] = `
".list {
  counter-reset: glsCounter;
}
.list > * {
  counter-increment: glsCounter;
}
.list > *::before {
  content: var(--prefix) counter(glsCounter, decimal);
}"
`;

exports[`Manifest examples counter: .list-2 { @include counter(decimal-leading-zero, $continue: tips); } 1`] = `
".list-2 > * {
  counter-increment: tips;
}
.list-2 > *::before {
  content: counter(tips, decimal-leading-zero);
}"
`;

exports[`Manifest examples counter: .steps { @include counter(decimal, $name: steps, $items: ".step") { fo 1`] = `
".steps {
  counter-reset: steps;
}
.steps > .step {
  counter-increment: steps;
}
.steps > .step::before {
  content: counter(steps, decimal);
  font-weight: 700;
}"
`;

exports[`Manifest examples escape-to-parent: .a .b { @include escape-to-parent(".theme-dark") { color: white; } } 1`] = `
".theme-dark.a .b {
  color: white;
}"
`;

exports[`Manifest examples escape-to-parent: .a { @include escape-to-parent(".theme-dark") { color: white; } } 1`] = `
".theme-dark.a {
  color: white;
}"
`;

exports[`Manifest examples escape-to-parent: .a { @include escape-to-parent(".theme-dark, .theme-dim") { color: whi 1`] = `
".theme-dark.a, .theme-dim.a {
  color: white;
}"
`;

exports[`Manifest examples escape-to-parent: .a, .b { @include escape-to-parent(".theme-dark") { color: white; } } 1`] = `
".theme-dark.a, .theme-dark.b {
  color: white;
}"
`;

exports[`Manifest examples escape-to-parent: ul li { @include escape-to-parent(".theme-dark") { color: white; } } 1`] = `
"ul.theme-dark li {
  color: white;
}"
`;

exports[`Manifest examples except: .a { @include except("first") { margin: 0; } } 1`] = `
".a:not(:first-of-type) {
  margin: 0;
}"
`;

exports[`Manifest examples except: .a { @include except(-1, $of: ".card") { margin: 0; } } 1`] = `
".a:not(:nth-last-child(1 of .card)) {
  margin: 0;
}"
`;

exports[`Manifest examples except: .a { @include except(1, 3) { margin: 0; } } 1`] = `
".a:not(:nth-of-type(1)):not(:nth-of-type(3)) {
  margin: 0;
}"
`;

exports[`Manifest examples except: .a { @include except(2) { margin: 0; } } 1`] = `
".a:not(:nth-of-type(2)) {
  margin: 0;
}"
`;

exports[`Manifest examples except: .a { @include except(2, $of: ".card") { margin: 0; } } 1`] = `
".a:not(:nth-child(2 of .card)) {
  margin: 0;
}"
`;

exports[`Manifest examples except: .a { @include except(3n) { margin: 0; } } 1`] = `
".a:not(:nth-of-type(3n)) {
  margin: 0;
}"
`;

exports[`Manifest examples except: .a { @include except(odd, $of: "li.done") { margin: 0; } } 1`] = `
".a:not(:nth-child(odd of li.done)) {
  margin: 0;
}"
`;

exports[`Manifest examples fillNulls: .a { margin: fillNulls(1px null 3px null, space); } 1`] = `
".a {
  margin: 1px 0 3px 0;
}"
`;

exports[`Manifest examples fluid: .section { padding: fluid(16px, 64px) fluid(8px, 40px); } 1`] = `
".section {
  padding: clamp(1rem, 0rem + 5vw, 4rem) clamp(0.5rem, -0.1667rem + 3.3333vw, 2.5rem);
}"
`;

exports[`Manifest examples fluid: .stack { gap: fluid(0.5rem, 2rem); } 1`] = `
".stack {
  gap: clamp(0.5rem, 0rem + 2.5vw, 2rem);
}"
`;

exports[`Manifest examples fluid: .title { font-size: fluid(1rem, 3rem, 320px, 1200px); } 1`] = `
".title {
  font-size: clamp(1rem, 0.2727rem + 3.6364vw, 3rem);
}"
`;

exports[`Manifest examples fluid: .title { font-size: fluid(24px, 48px); } 1`] = `
".title {
  font-size: clamp(1.5rem, 1rem + 2.5vw, 3rem);
}"
`;

exports[`Manifest examples focus-ring: .button { @include focus-ring; } 1`] = `
".button:focus-visible {
  outline: 2px solid currentColor;
  outline-offset: 2px;
}"
`;

exports[`Manifest examples focus-ring: .card-link { @include focus-ring(3px, 4px, var(--focus)); } 1`] = `
".card-link:focus-visible {
  outline: 3px solid var(--focus);
  outline-offset: 4px;
}"
`;

exports[`Manifest examples font-face: @include font-face("Inter", "/fonts/inter"); 1`] = `
"@font-face {
  font-family: "Inter";
  src: url("/fonts/inter.woff2") format("woff2");
  font-style: normal;
  font-weight: 400;
}"
`;

exports[`Manifest examples font-face: @include font-face("Inter", "/fonts/inter", "italic", $font-weight: "b 1`] = `
"@font-face {
  font-family: "Inter";
  src: url("/fonts/inter.woff2") format("woff2");
  font-style: italic;
  font-weight: bold;
}"
`;

exports[`Manifest examples font-face: @include font-face("Inter", "/fonts/inter", auto, "100 900", $file-for 1`] = `
"@font-face {
  font-family: "Inter";
  src: url("/fonts/inter.woff2") format("woff2");
  font-style: auto;
  font-weight: 100 900;
}"
`;

exports[`Manifest examples font-face: @include font-face("Inter", "/fonts/inter", italic, 700, woff2 woff); 1`] = `
"@font-face {
  font-family: "Inter";
  src: url("/fonts/inter.woff2") format("woff2"), url("/fonts/inter.woff") format("woff");
  font-style: italic;
  font-weight: 700;
}"
`;

exports[`Manifest examples font-face: @include font-face("Inter", "/fonts/inter", oblique 10deg 20deg, $font 1`] = `
"@font-face {
  font-family: "Inter";
  src: url("/fonts/inter.woff2") format("woff2");
  font-style: oblique 10deg 20deg;
  font-weight: 450.5;
}"
`;

exports[`Manifest examples font-face: @include font-face("Readex Pro", "/fonts/readex", $font-weight: 160 70 1`] = `
"@font-face {
  font-family: "Readex Pro";
  src: url("/fonts/readex.woff2") format("woff2");
  font-style: normal;
  font-weight: 160 700;
  font-display: swap;
}"
`;

exports[`Manifest examples fontSizer: .a { font-size: fontSizer(16px, 1.5); } 1`] = `
".a {
  font-size: 24px;
}"
`;

exports[`Manifest examples fontSource: .a { content: "#{fontSource("Inter", "/fonts/inter", woff2)}"; } 1`] = `
".a {
  content: 'url("/fonts/inter.woff2") format("woff2")';
}"
`;

exports[`Manifest examples gradient: .a { @include gradient((black 0 25%, white 0 50%), conic, $repeating:  1`] = `
".a {
  background-image: repeating-conic-gradient(black 0 25%, white 0 50%);
}"
`;

exports[`Manifest examples gradient: .a { @include gradient((blue, yellow), $direction: right, $in: oklab); 1`] = `
".a {
  background-image: linear-gradient(to right, blue, yellow);
  background-image: linear-gradient(to right in oklab, blue, yellow);
}"
`;

exports[`Manifest examples gradient: .a { @include gradient((red, blue)); } 1`] = `
".a {
  background-image: linear-gradient(red, blue);
}"
`;

exports[`Manifest examples gradient: .a { @include gradient((red, blue), $direction: "top-right"); } 1`] = `
".a {
  background-image: linear-gradient(to top right, red, blue);
}"
`;

exports[`Manifest examples gradient: .a { @include gradient((red, blue), radial, $shape: circle, $position: 1`] = `
".a {
  background-image: radial-gradient(circle at top left, red, blue);
}"
`;

exports[`Manifest examples gradient: .a { @include gradient((teal 0 40%, purple 40% 75%, coral 75% 100%), c 1`] = `
".a {
  background-image: conic-gradient(teal 0 40%, purple 40% 75%, coral 75% 100%);
}"
`;

exports[`Manifest examples gradientValue: .a { background-image: gradientValue((rgba(0, 0, 0, 0.75), transparent 1`] = `
".a {
  background-image: linear-gradient(to top, rgba(0, 0, 0, 0.75), transparent), url("/img/hero.jpg");
}"
`;

exports[`Manifest examples gradientValue: .a { border: 4px solid; border-image: gradientValue((red, blue), $dire 1`] = `
".a {
  border: 4px solid;
  border-image: linear-gradient(to right, red, blue) 1;
}"
`;

exports[`Manifest examples gradientValue: .a { mask-image: gradientValue((#000 60%, transparent)); } 1`] = `
".a {
  mask-image: linear-gradient(#000 60%, transparent);
}"
`;

exports[`Manifest examples hide: .icon-button-label { @include hide; } 1`] = `
".icon-button-label {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  overflow: hidden;
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(100%);
  white-space: nowrap;
}"
`;

exports[`Manifest examples hide: .skip-link { position: fixed; top: 1rem; left: 1rem; padding: 0.75rem  1`] = `
".skip-link {
  position: fixed;
  top: 1rem;
  left: 1rem;
  padding: 0.75rem 1rem;
}
.skip-link:not(:focus-within):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  overflow: hidden;
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(100%);
  white-space: nowrap;
}"
`;

exports[`Manifest examples hide: .skip-links { @include hide(focusable); } 1`] = `
".skip-links:not(:focus-within):not(:active) {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  border: 0;
  overflow: hidden;
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(100%);
  white-space: nowrap;
}"
`;

exports[`Manifest examples hide: @media (max-width: 599.98px) { .nav-label { @include hide; } } 1`] = `
"@media (max-width: 599.98px) {
  .nav-label {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    border: 0;
    overflow: hidden;
    clip: rect(1px, 1px, 1px, 1px);
    clip-path: inset(100%);
    white-space: nowrap;
  }
}"
`;

exports[`Manifest examples isColor: .a { color: isColor(red); } 1`] = `
".a {
  color: red;
}"
`;

exports[`Manifest examples isGutter: .a { --x: #{isGutter(20px)}; } 1`] = `
".a {
  --x: true;
}"
`;

exports[`Manifest examples isGutter: .a { --x: #{isGutter(var(--gap))}; } 1`] = `
".a {
  --x: true;
}"
`;

exports[`Manifest examples isNumber: .a { width: isNumber(1.5rem); } 1`] = `
".a {
  width: 1.5rem;
}"
`;

exports[`Manifest examples isNumber: .a { z-index: isNumber(5); } 1`] = `
".a {
  z-index: 5;
}"
`;

exports[`Manifest examples isTime: .a { animation-duration: isTime(0.4s); } 1`] = `
".a {
  animation-duration: 0.4s;
}"
`;

exports[`Manifest examples isTime: .a { animation-duration: isTime(var(--duration)); } 1`] = `
".a {
  animation-duration: var(--duration);
}"
`;

exports[`Manifest examples isTime: .a { transition-duration: isTime((0.2s, 0.4s)); } 1`] = `
".a {
  transition-duration: 0.2s, 0.4s;
}"
`;

exports[`Manifest examples loadify: .a { @include loadify(0.4s); } 1`] = `
".a {
  animation: loadify 0.5s 0.4s backwards;
}
@media (prefers-reduced-motion: reduce) {
  .a {
    animation: none;
  }
}"
`;

exports[`Manifest examples loadify: .a { @include loadify(var(--delay)); } 1`] = `
".a {
  animation: loadify 0.5s var(--delay) backwards;
}
@media (prefers-reduced-motion: reduce) {
  .a {
    animation: none;
  }
}"
`;

exports[`Manifest examples loadify: @include loadify(init); .a { @include loadify; } 1`] = `
"@keyframes loadify {
  from {
    opacity: 0;
  }
}
.a {
  animation: loadify 0.5s 0.2s backwards;
}
@media (prefers-reduced-motion: reduce) {
  .a {
    animation: none;
  }
}"
`;

exports[`Manifest examples loadify: @include loadify; .a { @include loadify(0.4s, 1s); } 1`] = `
"@keyframes loadify {
  from {
    opacity: 0;
  }
}
.a {
  animation: loadify 1s 0.4s backwards;
}
@media (prefers-reduced-motion: reduce) {
  .a {
    animation: none;
  }
}"
`;

exports[`Manifest examples long-shadow: .badge { @include long-shadow(#701a75, 26px, bottom-right, transparent 1`] = `
".badge {
  box-shadow: 1.4142px 1.4142px #701a75, 2.8284px 2.8284px color-mix(in oklab, #701a75 92.31%, transparent), 4.2426px 4.2426px color-mix(in oklab, #701a75 84.62%, transparent), 5.6568px 5.6568px color-mix(in oklab, #701a75 76.92%, transparent), 7.071px 7.071px color-mix(in oklab, #701a75 69.23%, transparent), 8.4852px 8.4852px color-mix(in oklab, #701a75 61.54%, transparent), 9.8994px 9.8994px color-mix(in oklab, #701a75 53.85%, transparent), 11.3136px 11.3136px color-mix(in oklab, #701a75 46.15%, transparent), 12.7278px 12.7278px color-mix(in oklab, #701a75 38.46%, transparent), 14.142px 14.142px color-mix(in oklab, #701a75 30.77%, transparent), 15.5562px 15.5562px color-mix(in oklab, #701a75 23.08%, transparent), 16.9704px 16.9704px color-mix(in oklab, #701a75 15.38%, transparent), 18.3846px 18.3846px color-mix(in oklab, #701a75 7.69%, transparent);
}"
`;

exports[`Manifest examples long-shadow: .button { @include long-shadow(currentColor, 10px, bottom-right, $step 1`] = `
".button {
  box-shadow: 1.4142px 1.4142px currentColor, 2.8284px 2.8284px currentColor, 4.2426px 4.2426px currentColor, 5.6568px 5.6568px currentColor, 7.071px 7.071px currentColor;
}"
`;

exports[`Manifest examples long-shadow: .button { @include long-shadow(currentColor, 10px, bottom-right, $step 2`] = `
".button {
  box-shadow: 1.4142px 1.4142px currentColor, 2.8284px 2.8284px currentColor, 4.2426px 4.2426px currentColor, 5.6568px 5.6568px currentColor, 7.071px 7.071px currentColor;
}
.button:hover {
  box-shadow: 1.4142px 1.4142px currentColor, 2.8284px 2.8284px currentColor, 4.2426px 4.2426px currentColor, 5.6568px 5.6568px currentColor, 7.071px 7.071px currentColor, 8.4852px 8.4852px currentColor, 9.8994px 9.8994px currentColor, 11.3136px 11.3136px currentColor;
}
.button:active {
  box-shadow: 1.4142px 1.4142px currentColor, 2.8284px 2.8284px currentColor;
}"
`;

exports[`Manifest examples long-shadow: .tile { @include long-shadow(#f59e0b, 52px, 160deg, #7c2d12); } 1`] = `
".tile {
  box-shadow: 0.4446px 1.2216px #f59e0b, 0.8892px 2.4432px color-mix(in oklab, #f59e0b 97.5%, #7c2d12), 1.3338px 3.6648px color-mix(in oklab, #f59e0b 95%, #7c2d12), 1.7784px 4.8864px color-mix(in oklab, #f59e0b 92.5%, #7c2d12), 2.223px 6.108px color-mix(in oklab, #f59e0b 90%, #7c2d12), 2.6676px 7.3297px color-mix(in oklab, #f59e0b 87.5%, #7c2d12), 3.1122px 8.5513px color-mix(in oklab, #f59e0b 85%, #7c2d12), 3.5568px 9.7729px color-mix(in oklab, #f59e0b 82.5%, #7c2d12), 4.0014px 10.9945px color-mix(in oklab, #f59e0b 80%, #7c2d12), 4.446px 12.2161px color-mix(in oklab, #f59e0b 77.5%, #7c2d12), 4.8906px 13.4377px color-mix(in oklab, #f59e0b 75%, #7c2d12), 5.3352px 14.6593px color-mix(in oklab, #f59e0b 72.5%, #7c2d12), 5.7798px 15.8809px color-mix(in oklab, #f59e0b 70%, #7c2d12), 6.2244px 17.1025px color-mix(in oklab, #f59e0b 67.5%, #7c2d12), 6.669px 18.3242px color-mix(in oklab, #f59e0b 65%, #7c2d12), 7.1136px 19.5458px color-mix(in oklab, #f59e0b 62.5%, #7c2d12), 7.5582px 20.7674px color-mix(in oklab, #f59e0b 60%, #7c2d12), 8.0028px 21.989px color-mix(in oklab, #f59e0b 57.5%, #7c2d12), 8.4474px 23.2106px color-mix(in oklab, #f59e0b 55%, #7c2d12), 8.892px 24.4322px color-mix(in oklab, #f59e0b 52.5%, #7c2d12), 9.3366px 25.6538px color-mix(in oklab, #f59e0b 50%, #7c2d12), 9.7812px 26.8754px color-mix(in oklab, #f59e0b 47.5%, #7c2d12), 10.2258px 28.097px color-mix(in oklab, #f59e0b 45%, #7c2d12), 10.6704px 29.3186px color-mix(in oklab, #f59e0b 42.5%, #7c2d12), 11.115px 30.5403px color-mix(in oklab, #f59e0b 40%, #7c2d12), 11.5596px 31.7619px color-mix(in oklab, #f59e0b 37.5%, #7c2d12), 12.0042px 32.9835px color-mix(in oklab, #f59e0b 35%, #7c2d12), 12.4488px 34.2051px color-mix(in oklab, #f59e0b 32.5%, #7c2d12), 12.8934px 35.4267px color-mix(in oklab, #f59e0b 30%, #7c2d12), 13.338px 36.6483px color-mix(in oklab, #f59e0b 27.5%, #7c2d12), 13.7826px 37.8699px color-mix(in oklab, #f59e0b 25%, #7c2d12), 14.2272px 39.0915px color-mix(in oklab, #f59e0b 22.5%, #7c2d12), 14.6718px 40.3131px color-mix(in oklab, #f59e0b 20%, #7c2d12), 15.1164px 41.5347px color-mix(in oklab, #f59e0b 17.5%, #7c2d12), 15.561px 42.7564px color-mix(in oklab, #f59e0b 15%, #7c2d12), 16.0056px 43.978px color-mix(in oklab, #f59e0b 12.5%, #7c2d12), 16.4502px 45.1996px color-mix(in oklab, #f59e0b 10%, #7c2d12), 16.8948px 46.4212px color-mix(in oklab, #f59e0b 7.5%, #7c2d12), 17.3394px 47.6428px color-mix(in oklab, #f59e0b 5%, #7c2d12), 17.784px 48.8644px color-mix(in oklab, #f59e0b 2.5%, #7c2d12);
}"
`;

exports[`Manifest examples mapDeepGet: $theme: (card: (padding: 16px, radius: 8px)); .a { padding: mapDeepGet 1`] = `
".a {
  padding: 16px;
  border-radius: 8px;
}"
`;

exports[`Manifest examples motion-safe: .card { @include motion-safe { transition: transform 0.2s ease; } } 1`] = `
"@media (prefers-reduced-motion: no-preference) {
  .card {
    transition: transform 0.2s ease;
  }
}"
`;

exports[`Manifest examples motion-safe: @include motion-safe { .spinner { animation: spin 1s linear infinite;  1`] = `
"@media (prefers-reduced-motion: no-preference) {
  .spinner {
    animation: spin 1s linear infinite;
  }
}"
`;

exports[`Manifest examples only: .a { @include only("first") { margin: 0; } } 1`] = `
".a:first-of-type {
  margin: 0;
}"
`;

exports[`Manifest examples only: .a { @include only(-1) { margin: 0; } } 1`] = `
".a:nth-last-of-type(1) {
  margin: 0;
}"
`;

exports[`Manifest examples only: .a { @include only(-1, $of: ".card") { margin: 0; } } 1`] = `
".a:nth-last-child(1 of .card) {
  margin: 0;
}"
`;

exports[`Manifest examples only: .a { @include only(1, 3) { margin: 0; } } 1`] = `
".a:nth-of-type(1), .a:nth-of-type(3) {
  margin: 0;
}"
`;

exports[`Manifest examples only: .a { @include only(2, $of: ".card") { margin: 0; } } 1`] = `
".a:nth-child(2 of .card) {
  margin: 0;
}"
`;

exports[`Manifest examples only: .a { @include only(3n) { margin: 0; } } 1`] = `
".a:nth-of-type(3n) {
  margin: 0;
}"
`;

exports[`Manifest examples only: .a { @include only(odd, $of: "li.done") { margin: 0; } } 1`] = `
".a:nth-child(odd of li.done) {
  margin: 0;
}"
`;

exports[`Manifest examples pixelify: .a { width: pixelify(2rem); } 1`] = `
".a {
  width: 32px;
}"
`;

exports[`Manifest examples pixelify: .a { width: pixelify(12pt); } 1`] = `
".a {
  width: 16px;
}"
`;

exports[`Manifest examples pixelify: .a { width: pixelify(24); } 1`] = `
".a {
  width: 24px;
}"
`;

exports[`Manifest examples pixelify: .a { width: pixelify(24px); } 1`] = `
".a {
  width: 24px;
}"
`;

exports[`Manifest examples pixelify: .a { width: pixelify(pixelify(1in)); } 1`] = `
".a {
  width: 96px;
}"
`;

exports[`Manifest examples placeholder: .field { @include placeholder { color: gray; } } 1`] = `
".field::placeholder {
  color: gray;
}"
`;

exports[`Manifest examples placeholder: @include placeholder { color: gray; opacity: 1; } 1`] = `
"&::placeholder {
  color: gray;
  opacity: 1;
}"
`;

exports[`Manifest examples placeholder-shown: .field { @include placeholder-shown { & + label { transform: none; } } 1`] = `
".field:placeholder-shown + label {
  transform: none;
}"
`;

exports[`Manifest examples placeholder-shown: .field { @include placeholder-shown { border-color: gray; } } 1`] = `
".field:placeholder-shown {
  border-color: gray;
}"
`;

exports[`Manifest examples position: .a { @include position(absolute, #{16}px AUTO revert-layer); } 1`] = `
".a {
  position: absolute;
  top: 16px;
  right: AUTO;
  bottom: revert-layer;
  left: AUTO;
}"
`;

exports[`Manifest examples position: .a { @include position(absolute, 0 null null 0); } 1`] = `
".a {
  position: absolute;
  top: 0;
  left: 0;
}"
`;

exports[`Manifest examples position: .a { @include position(absolute, 0); } 1`] = `
".a {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}"
`;

exports[`Manifest examples position: .a { @include position(absolute, 0, $logical: null); } 1`] = `
".a {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
}"
`;

exports[`Manifest examples position: .a { @include position(absolute, null 16px 16px 16px); } 1`] = `
".a {
  position: absolute;
  right: 16px;
  bottom: 16px;
  left: 16px;
}"
`;

exports[`Manifest examples position: .a { @include position(fixed, 0 10px); } 1`] = `
".a {
  position: fixed;
  top: 0;
  right: 10px;
  bottom: 0;
  left: 10px;
}"
`;

exports[`Manifest examples position: .badge { @include position(absolute, 0 auto auto 1rem, $logical: true) 1`] = `
".badge {
  position: absolute;
  inset-block-start: 0;
  inset-inline-end: auto;
  inset-block-end: auto;
  inset-inline-start: 1rem;
}"
`;

exports[`Manifest examples position: .tip { @include position(absolute, anchor(bottom) null null anchor(lef 1`] = `
".tip {
  position: absolute;
  top: anchor(bottom);
  left: anchor(left);
}"
`;

exports[`Manifest examples pseudoSelector: .a { content: "#{pseudoSelector(("button", "a"), "hover")}"; } 1`] = `
".a {
  content: "button:hover, a:hover";
}"
`;

exports[`Manifest examples remify: .a { font-size: remify(24px); } 1`] = `
".a {
  font-size: 1.5rem;
}"
`;

exports[`Manifest examples remove: .a { @include remove("max", "medium"); } 1`] = `
"@media (max-width: 767.98px) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples remove: .a { @include remove("min", "medium"); } 1`] = `
"@media (min-width: 768px) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples remove: .a { @include remove("only", "medium"); } 1`] = `
"@media (width: 768px) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples remove: .a { @include remove("small", "large"); } 1`] = `
"@media (min-width: 576px) and (max-width: 991.98px) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples remove: .a { @include remove; } 1`] = `
".a {
  display: none;
}"
`;

exports[`Manifest examples reset-css: @include reset-css; 1`] = `
"*,
*::before,
*::after {
  box-sizing: border-box;
}

:where(body, h1, h2, h3, h4, h5, h6, p, figure, blockquote, dl, dd, pre) {
  margin: 0;
}

:where(body) {
  line-height: 1.5;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
}

:where(h1, h2, h3, h4, h5, h6, button, input, label) {
  line-height: 1.1;
}

:where(ul, ol)[role=list] {
  list-style: none;
  padding: 0;
}

:where(img, picture, video, canvas) {
  display: block;
}

:where(img, picture, video, canvas, svg) {
  max-width: 100%;
}

:where(input, button, textarea, select) {
  font: inherit;
}

:where(p, h1, h2, h3, h4, h5, h6) {
  overflow-wrap: break-word;
}

:where(textarea):not([rows]) {
  min-height: 10em;
}

:where(:target) {
  scroll-margin-block: 5ex;
}

:where(table) {
  border-collapse: collapse;
  border-spacing: 0;
}"
`;

exports[`Manifest examples reset-figure: figure { @include reset-figure; } 1`] = `
"figure {
  margin: 0;
}
figure img {
  display: block;
  max-inline-size: 100%;
}
:where(figure img) {
  height: auto;
}"
`;

exports[`Manifest examples resizable: .a { @include resizable(vertical, scroll); } 1`] = `
".a {
  resize: vertical;
  overflow: scroll;
  max-width: 100%;
}"
`;

exports[`Manifest examples resizable: .a { @include resizable; } 1`] = `
".a {
  resize: both;
  overflow: auto;
  max-width: 100%;
}"
`;

exports[`Manifest examples responsive-image: .card img { @include responsive-image; } 1`] = `
".card img {
  display: block;
  max-inline-size: 100%;
}
:where(.card img) {
  height: auto;
}"
`;

exports[`Manifest examples responsive-image: img { @include responsive-image; } 1`] = `
"img {
  display: block;
  max-inline-size: 100%;
}
:where(img) {
  height: auto;
}"
`;

exports[`Manifest examples reveal: .dropdown { @include reveal(popover, 0.5s, right 1.5rem, null, false,  1`] = `
".dropdown {
  opacity: 0;
  translate: 1.5rem 0;
  transition: opacity 0.5s cubic-bezier(0.34, 1.56, 0.64, 1), translate 0.5s cubic-bezier(0.34, 1.56, 0.64, 1), display 0.5s allow-discrete, overlay 0.5s allow-discrete;
}
.dropdown:popover-open {
  opacity: 1;
  translate: 0 0;
}
@starting-style {
  .dropdown:popover-open {
    opacity: 0;
    translate: 1.5rem 0;
  }
}
@media (prefers-reduced-motion: reduce) {
  .dropdown {
    transition-duration: 0.01ms;
  }
}"
`;

exports[`Manifest examples reveal: .menu { @include reveal(".is-open", 200ms, right 1rem, null, false); } 1`] = `
".menu {
  opacity: 0;
  translate: 1rem 0;
  transition: opacity 200ms ease, translate 200ms ease, display 200ms allow-discrete, overlay 200ms allow-discrete;
}
.menu.is-open {
  opacity: 1;
  translate: 0 0;
}
@starting-style {
  .menu.is-open {
    opacity: 0;
    translate: 1rem 0;
  }
}
@media (prefers-reduced-motion: reduce) {
  .menu {
    transition-duration: 0.01ms;
  }
}"
`;

exports[`Manifest examples reveal: .modal { @include reveal(dialog, 0.25s, none, 0.95); } 1`] = `
".modal {
  opacity: 0;
  scale: 0.95;
  transition: opacity 0.25s ease, scale 0.25s ease, display 0.25s allow-discrete, overlay 0.25s allow-discrete;
}
.modal[open] {
  opacity: 1;
  scale: 1;
}
@starting-style {
  .modal[open] {
    opacity: 0;
    scale: 0.95;
  }
}
.modal::backdrop {
  opacity: 0;
  transition: opacity 0.25s ease, display 0.25s allow-discrete, overlay 0.25s allow-discrete;
}
.modal[open]::backdrop {
  opacity: 1;
}
@starting-style {
  .modal[open]::backdrop {
    opacity: 0;
  }
}
@media (prefers-reduced-motion: reduce) {
  .modal, .modal::backdrop {
    transition-duration: 0.01ms;
  }
}"
`;

exports[`Manifest examples reveal: .sheet { @include reveal(dialog, 0.3s, bottom 2rem); } 1`] = `
".sheet {
  opacity: 0;
  translate: 0 2rem;
  transition: opacity 0.3s ease, translate 0.3s ease, display 0.3s allow-discrete, overlay 0.3s allow-discrete;
}
.sheet[open] {
  opacity: 1;
  translate: 0 0;
}
@starting-style {
  .sheet[open] {
    opacity: 0;
    translate: 0 2rem;
  }
}
.sheet::backdrop {
  opacity: 0;
  transition: opacity 0.3s ease, display 0.3s allow-discrete, overlay 0.3s allow-discrete;
}
.sheet[open]::backdrop {
  opacity: 1;
}
@starting-style {
  .sheet[open]::backdrop {
    opacity: 0;
  }
}
@media (prefers-reduced-motion: reduce) {
  .sheet, .sheet::backdrop {
    transition-duration: 0.01ms;
  }
}"
`;

exports[`Manifest examples reveal: .tooltip { @include reveal; } 1`] = `
".tooltip {
  opacity: 0;
  translate: 0 -0.75rem;
  transition: opacity 0.3s ease, translate 0.3s ease, display 0.3s allow-discrete, overlay 0.3s allow-discrete;
}
.tooltip:popover-open {
  opacity: 1;
  translate: 0 0;
}
@starting-style {
  .tooltip:popover-open {
    opacity: 0;
    translate: 0 -0.75rem;
  }
}
.tooltip::backdrop {
  opacity: 0;
  transition: opacity 0.3s ease, display 0.3s allow-discrete, overlay 0.3s allow-discrete;
}
.tooltip:popover-open::backdrop {
  opacity: 1;
}
@starting-style {
  .tooltip:popover-open::backdrop {
    opacity: 0;
  }
}
@media (prefers-reduced-motion: reduce) {
  .tooltip, .tooltip::backdrop {
    transition-duration: 0.01ms;
  }
}"
`;

exports[`Manifest examples scissors: .a { @include scissors(4px 8px 12px 16px); } 1`] = `
".a {
  clip-path: polygon(0 4px, 4px 0, calc(100% - 8px) 0, 100% 8px, 100% calc(100% - 12px), calc(100% - 12px) 100%, 16px 100%, 0 calc(100% - 16px));
}"
`;

exports[`Manifest examples scissors: .a { @include scissors(12px); } 1`] = `
".a {
  clip-path: polygon(0 12px, 12px 0, calc(100% - 12px) 0, 100% 12px, 100% calc(100% - 12px), calc(100% - 12px) 100%, 12px 100%, 0 calc(100% - 12px));
}"
`;

exports[`Manifest examples screen-agent: .a { @include screen-agent("2x") { background-image: url("/img/a@2x.pn 1`] = `
"@media (min-resolution: 192dpi) {
  .a {
    background-image: url("/img/a@2x.png");
  }
}"
`;

exports[`Manifest examples shade: .a { color: shade(red, 20%); } 1`] = `
".a {
  color: #cc0000;
}"
`;

exports[`Manifest examples shorthandProperty: .a { border-radius: shorthandProperty(4px 8px 12px 16px); } 1`] = `
".a {
  border-radius: 4px 8px 12px 16px;
}"
`;

exports[`Manifest examples shorthandProperty: .a { margin: shorthandProperty(10px 20px); } 1`] = `
".a {
  margin: 10px 20px 10px 20px;
}"
`;

exports[`Manifest examples shorthandProperty: .a { padding: shorthandProperty(8px 12px 16px); } 1`] = `
".a {
  padding: 8px 12px 16px 12px;
}"
`;

exports[`Manifest examples shorthandProperty: .a { padding: shorthandProperty(16px); } 1`] = `
".a {
  padding: 16px 16px 16px 16px;
}"
`;

exports[`Manifest examples sizer: .a { @include sizer(40px); } 1`] = `
".a {
  width: 40px;
  height: 40px;
}"
`;

exports[`Manifest examples sizer: .a { @include sizer(120px, 40px); } 1`] = `
".a {
  width: 120px;
  height: 40px;
}"
`;

exports[`Manifest examples smartphone: .a { @include smartphone("iPhone-Air") { display: none; } } 1`] = `
"@media only screen and (device-width: 420px) and (device-height: 912px) and (orientation: portrait) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples smartphone: .a { @include smartphone("iPhone11") { display: none; } } 1`] = `
"@media only screen and (device-width: 414px) and (device-height: 896px) and (orientation: portrait) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples smartphone: .a { @include smartphone("iPhone11", landscape) { display: none; } } 1`] = `
"@media only screen and (device-width: 896px) and (device-height: 414px) and (orientation: landscape) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples smartphone: .a { @include smartphone("iPhone16e", landscape) { display: none; } } 1`] = `
"@media only screen and (device-width: 844px) and (device-height: 390px) and (orientation: landscape) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples smartphone: .a { @include smartphone("iPhone17-Pro") { display: none; } } 1`] = `
"@media only screen and (device-width: 402px) and (device-height: 874px) and (orientation: portrait) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples sprite: .icon { @include sprite("/img/sprite.png"); } 1`] = `
".icon {
  display: inline-block;
  background-image: url("/img/sprite.png");
  background-repeat: no-repeat;
}"
`;

exports[`Manifest examples sprite: .icon { @include sprite("/img/sprite.png", 0 -40px); } 1`] = `
".icon {
  display: inline-block;
  background-image: url("/img/sprite.png");
  background-position: 0 -40px;
  background-repeat: no-repeat;
}"
`;

exports[`Manifest examples sprite: .icon { @include sprite("/img/sprite.png", left 10px top 5px); } 1`] = `
".icon {
  display: inline-block;
  background-image: url("/img/sprite.png");
  background-position: left 10px top 5px;
  background-repeat: no-repeat;
}"
`;

exports[`Manifest examples sprite: .icon { @include sprite("/img/sprite.png?v=2"); } 1`] = `
".icon {
  display: inline-block;
  background-image: url("/img/sprite.png?v=2");
  background-repeat: no-repeat;
}"
`;

exports[`Manifest examples sprite: .icon { @include sprite("/img/sprite.webp"); } 1`] = `
".icon {
  display: inline-block;
  background-image: url("/img/sprite.webp");
  background-repeat: no-repeat;
}"
`;

exports[`Manifest examples sprite: .icon { @include sprite(0 -40px); } 1`] = `
".icon {
  background-position: 0 -40px;
}"
`;

exports[`Manifest examples sprite: .icon { @include sprite(center); } 1`] = `
".icon {
  background-position: center;
}"
`;

exports[`Manifest examples stretched-link: .card a { @include stretched-link("after"); } 1`] = `
".card a::after {
  content: "";
  position: absolute;
  pointer-events: auto;
  inset: 0;
  z-index: 1;
}"
`;

exports[`Manifest examples stretched-link: .card a { @include stretched-link; } 1`] = `
".card a::before {
  content: "";
  position: absolute;
  pointer-events: auto;
  inset: 0;
  z-index: 1;
}"
`;

exports[`Manifest examples stretched-link: .card label { @include stretched-link; } 1`] = `
".card label::before {
  content: "";
  position: absolute;
  pointer-events: auto;
  inset: 0;
  z-index: 1;
}"
`;

exports[`Manifest examples tablet: .a { @include tablet("iPad-A16", landscape) { display: none; } } 1`] = `
"@media only screen and (device-width: 1180px) and (device-height: 820px) and (orientation: landscape) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples tablet: .a { @include tablet("iPadMini6") { display: none; } } 1`] = `
"@media only screen and (device-width: 744px) and (device-height: 1133px) and (orientation: portrait) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples tablet: .a { @include tablet("iPadPro") { display: none; } } 1`] = `
"@media only screen and (device-width: 1024px) and (device-height: 1366px) and (orientation: portrait) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples tablet: .a { @include tablet("iPadPro", landscape) { display: none; } } 1`] = `
"@media only screen and (device-width: 1366px) and (device-height: 1024px) and (orientation: landscape) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples tablet: .a { @include tablet("iPadPro-13") { display: none; } } 1`] = `
"@media only screen and (device-width: 1032px) and (device-height: 1376px) and (orientation: portrait) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest examples text-gradient: .a { @include text-gradient((red, blue), $direction: top); } 1`] = `
".a {
  background: linear-gradient(to top, red, blue);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
}
@media (forced-colors: active) {
  .a {
    -webkit-text-fill-color: revert;
    color: revert;
    background-image: none;
  }
}"
`;

exports[`Manifest examples text-gradient: .a { @include text-gradient(blue yellow, $direction: right, $in: oklab 1`] = `
".a {
  background: linear-gradient(to right, blue, yellow);
  background: linear-gradient(to right in oklab, blue, yellow);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
}
@media (forced-colors: active) {
  .a {
    -webkit-text-fill-color: revert;
    color: revert;
    background-image: none;
  }
}"
`;

exports[`Manifest examples text-gradient: .a { @include text-gradient(red yellow lime cyan blue magenta red, con 1`] = `
".a {
  background: conic-gradient(red, yellow, lime, cyan, blue, magenta, red);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
}
@media (forced-colors: active) {
  .a {
    -webkit-text-fill-color: revert;
    color: revert;
    background-image: none;
  }
}"
`;

exports[`Manifest examples text-image: .a { @include text-image("/img/t.png"); } 1`] = `
".a {
  background-image: url("/img/t.png");
  background-size: cover;
  background-position: center;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
}
@media (forced-colors: active) {
  .a {
    -webkit-text-fill-color: revert;
    color: revert;
    background-image: none;
  }
}"
`;

exports[`Manifest examples text-image: .a { @include text-image("/img/t.png", $fallback: #333); } 1`] = `
".a {
  background-image: url("/img/t.png");
  background-color: #333;
  background-size: cover;
  background-position: center;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
}
@media (forced-colors: active) {
  .a {
    -webkit-text-fill-color: revert;
    color: revert;
    background-image: none;
  }
}"
`;

exports[`Manifest examples text-image: .a { @include text-image(var(--texture), $fallback: currentColor); } 1`] = `
".a {
  background-image: var(--texture);
  background-color: currentColor;
  background-size: cover;
  background-position: center;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
}
@media (forced-colors: active) {
  .a {
    -webkit-text-fill-color: revert;
    color: revert;
    background-image: none;
  }
}"
`;

exports[`Manifest examples text-selection: .a { @include text-selection("only") { background: yellow; } } 1`] = `
".a::selection {
  background: yellow;
}"
`;

exports[`Manifest examples text-selection: @include text-selection { background: yellow; } 1`] = `
"::selection {
  background: yellow;
}"
`;

exports[`Manifest examples text-shadow: .a { @include text-shadow(30deg #5bc0bb 12px); } 1`] = `
".a {
  text-shadow: 6px -10.392px #5bc0bb;
}"
`;

exports[`Manifest examples text-shadow: .a { @include text-shadow(bottom rgb(0 0 0 / 0.3) 6px 4px); } 1`] = `
".a {
  text-shadow: 0 6px 4px rgba(0, 0, 0, 0.3);
}"
`;

exports[`Manifest examples text-shadow: .a { @include text-shadow(bottom-right #5bc0bb 2rem true, $step: 0.125 1`] = `
".a {
  text-shadow: 0.0884rem 0.0884rem #5bc0bb, 0.1768rem 0.1768rem #5bc0bb, 0.2652rem 0.2652rem #5bc0bb, 0.3535rem 0.3535rem #5bc0bb, 0.4419rem 0.4419rem #5bc0bb, 0.5303rem 0.5303rem #5bc0bb, 0.6187rem 0.6187rem #5bc0bb, 0.7071rem 0.7071rem #5bc0bb, 0.7955rem 0.7955rem #5bc0bb, 0.8839rem 0.8839rem #5bc0bb, 0.9723rem 0.9723rem #5bc0bb, 1.0606rem 1.0606rem #5bc0bb, 1.149rem 1.149rem #5bc0bb, 1.2374rem 1.2374rem #5bc0bb, 1.3258rem 1.3258rem #5bc0bb, 1.4142rem 1.4142rem #5bc0bb;
}"
`;

exports[`Manifest examples text-shadow: .a { @include text-shadow(bottom-right #5bc0bb 24px true); } 1`] = `
".a {
  text-shadow: 0.7071px 0.7071px #5bc0bb, 1.4142px 1.4142px #5bc0bb, 2.1213px 2.1213px #5bc0bb, 2.8284px 2.8284px #5bc0bb, 3.5355px 3.5355px #5bc0bb, 4.2426px 4.2426px #5bc0bb, 4.9497px 4.9497px #5bc0bb, 5.6568px 5.6568px #5bc0bb, 6.3639px 6.3639px #5bc0bb, 7.071px 7.071px #5bc0bb, 7.7781px 7.7781px #5bc0bb, 8.4852px 8.4852px #5bc0bb, 9.1923px 9.1923px #5bc0bb, 9.8994px 9.8994px #5bc0bb, 10.6065px 10.6065px #5bc0bb, 11.3136px 11.3136px #5bc0bb, 12.0207px 12.0207px #5bc0bb, 12.7278px 12.7278px #5bc0bb, 13.4349px 13.4349px #5bc0bb, 14.142px 14.142px #5bc0bb, 14.8491px 14.8491px #5bc0bb, 15.5562px 15.5562px #5bc0bb, 16.2633px 16.2633px #5bc0bb, 16.9704px 16.9704px #5bc0bb;
}"
`;

exports[`Manifest examples text-shadow: .a { @include text-shadow(bottom-right rgb(0 0 0 / 0.35) 6px); } 1`] = `
".a {
  text-shadow: 4.2426px 4.2426px rgba(0, 0, 0, 0.35);
}"
`;

exports[`Manifest examples text-shadow: .a { @include text-shadow(top crimson 4px, bottom gold 4px); } 1`] = `
".a {
  text-shadow: 0 -4px crimson, 0 4px gold;
}"
`;

exports[`Manifest examples text-shadow: .a { @include text-shadow(top var(--shadow-color) var(--shadow-size)); 1`] = `
".a {
  text-shadow: 0 calc(-1 * var(--shadow-size)) var(--shadow-color);
}"
`;

exports[`Manifest examples text-stroke: .a { @include text-stroke(1px, currentColor, center); } 1`] = `
".a {
  -webkit-text-stroke-color: currentColor;
  -webkit-text-stroke-width: 1px;
}"
`;

exports[`Manifest examples text-stroke: .a { @include text-stroke(2px, #1d4ed8); } 1`] = `
".a {
  color: #1d4ed8;
  -webkit-text-fill-color: transparent;
  -webkit-text-stroke-color: #1d4ed8;
  -webkit-text-stroke-width: 2px;
}"
`;

exports[`Manifest examples text-stroke: .a { @include text-stroke(3px, #1d4ed8, outside, #fde047); } 1`] = `
".a {
  color: #fde047;
  paint-order: stroke fill;
  -webkit-text-stroke-color: #1d4ed8;
  -webkit-text-stroke-width: 6px;
}"
`;

exports[`Manifest examples text-stroke: .a { @include text-stroke(var(--stroke-width), var(--stroke-color)); } 1`] = `
".a {
  color: var(--stroke-color);
  -webkit-text-fill-color: transparent;
  -webkit-text-stroke-color: var(--stroke-color);
  -webkit-text-stroke-width: var(--stroke-width);
}"
`;

exports[`Manifest examples text-stroke: .a { @include text-stroke; } 1`] = `
".a {
  -webkit-text-fill-color: transparent;
  -webkit-text-stroke-color: currentColor;
  -webkit-text-stroke-width: 1px;
}"
`;

exports[`Manifest examples tint: .a { color: tint(red, 20%); } 1`] = `
".a {
  color: #ff3333;
}"
`;

exports[`Manifest examples tokens: :root { @include tokens((1: 0.25rem, 2: 0.5rem, 4: 1rem), space); @inc 1`] = `
":root {
  --space-1: 0.25rem;
  --space-2: 0.5rem;
  --space-4: 1rem;
  --radius-md: 8px;
  --radius-full: 9999px;
}"
`;

exports[`Manifest examples tokens: :root { @include tokens((bg: #fff, text: #111), color); } 1`] = `
":root {
  --color-bg: #fff;
  --color-text: #111;
}"
`;

exports[`Manifest examples tokens: :root { @include tokens((blue-500: #3b82f6, blue-600: #2563eb)); } 1`] = `
":root {
  --blue-500: #3b82f6;
  --blue-600: #2563eb;
}"
`;

exports[`Manifest examples tokens: :root { @include tokens((body: ("Readex Pro", sans-serif), label: "New 1`] = `
":root {
  --font-body: "Readex Pro", sans-serif;
  --font-label: "New";
}"
`;

exports[`Manifest examples tokens: :root { @include tokens((md: 0 4px 12px rgba(24, 24, 27, 0.08)), shado 1`] = `
":root {
  --shadow-md: 0 4px 12px rgba(24, 24, 27, 0.08);
  --motion-fast: 150ms;
  --motion-ease: cubic-bezier(0.2, 0, 0, 1);
}"
`;

exports[`Manifest examples tokens: :root { @include tokens((red: #ef4444, 500: #3b82f6), blue); } 1`] = `
":root {
  --blue-red: #ef4444;
  --blue-500: #3b82f6;
}"
`;

exports[`Manifest examples tokens: [data-theme="dark"] { @include tokens((bg: #09090b, accent: var(--blue 1`] = `
"[data-theme=dark] {
  --color-bg: #09090b;
  --color-accent: var(--blue-500);
}"
`;

exports[`Manifest examples triangle: .arrow { @include triangle("bottom", currentColor, var(--caret-w) var( 1`] = `
".arrow {
  content: "";
  height: 0;
  width: 0;
  display: inline-block;
  border-style: solid;
  border-color: currentColor transparent transparent;
  border-width: var(--caret-h) calc(var(--caret-w) / 2) 0;
}"
`;

exports[`Manifest examples triangle: .arrow { @include triangle("left", red); } 1`] = `
".arrow {
  content: "";
  height: 0;
  width: 0;
  display: inline-block;
  border-style: solid;
  border-color: transparent red transparent transparent;
  border-width: 4px 10px 4px 0;
}"
`;

exports[`Manifest examples triangle: .arrow { @include triangle("right", currentColor); } 1`] = `
".arrow {
  content: "";
  height: 0;
  width: 0;
  display: inline-block;
  border-style: solid;
  border-color: transparent transparent transparent currentColor;
  border-width: 4px 0 4px 10px;
}"
`;

exports[`Manifest examples triangle: .arrow { @include triangle("right", var(--accent), 6px 8px); } 1`] = `
".arrow {
  content: "";
  height: 0;
  width: 0;
  display: inline-block;
  border-style: solid;
  border-color: transparent transparent transparent var(--accent);
  border-width: 4px 0 4px 6px;
}"
`;

exports[`Manifest examples triangle: .arrow { @include triangle("top", color-mix(in srgb, red 50%, blue));  1`] = `
".arrow {
  content: "";
  height: 0;
  width: 0;
  display: inline-block;
  border-style: solid;
  border-color: transparent transparent color-mix(in srgb, red 50%, blue);
  border-width: 0 5px 8px;
}"
`;

exports[`Manifest examples triangle: .caret { @include triangle("bottom", black, 10px 8px); } 1`] = `
".caret {
  content: "";
  height: 0;
  width: 0;
  display: inline-block;
  border-style: solid;
  border-color: black transparent transparent;
  border-width: 8px 5px 0;
}"
`;

exports[`Manifest examples triangle: .next { @include triangle("inline-end", currentColor, 8px 12px); } 1`] = `
".next {
  content: "";
  height: 0;
  width: 0;
  display: inline-block;
  border-style: solid;
  border-color: transparent;
  border-inline-start-color: currentColor;
  border-block-width: 6px;
  border-inline-start-width: 8px;
  border-inline-end-width: 0;
}"
`;

exports[`Manifest examples triangle: .sort { @include triangle("block-start", currentColor); } 1`] = `
".sort {
  content: "";
  height: 0;
  width: 0;
  display: inline-block;
  border-style: solid;
  border-color: transparent;
  border-block-end-color: currentColor;
  border-inline-width: 5px;
  border-block-start-width: 0;
  border-block-end-width: 8px;
}"
`;

exports[`Manifest examples truncate: .a { @include truncate(1, 100%, block); } 1`] = `
".a {
  display: block;
  max-width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  word-wrap: normal;
}"
`;

exports[`Manifest examples truncate: .a { @include truncate(2, 40ch); } 1`] = `
".a {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 2;
  line-clamp: 2;
  overflow: hidden;
  max-width: 40ch;
}"
`;

exports[`Manifest examples truncate: .a { @include truncate(3); } 1`] = `
".a {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: 3;
  line-clamp: 3;
  overflow: hidden;
}"
`;

exports[`Manifest examples truncate: .a { @include truncate(none); } 1`] = `
".a {
  display: -webkit-box;
  -webkit-box-orient: vertical;
  -webkit-line-clamp: none;
  line-clamp: none;
  overflow: hidden;
}"
`;

exports[`Manifest examples truncate: .a { @include truncate; } 1`] = `
".a {
  display: inline-block;
  max-width: 100%;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  word-wrap: normal;
}"
`;

exports[`Manifest examples validateBreakpoint: .a { width: validateBreakpoint("medium"); } 1`] = `
".a {
  width: 768px;
}"
`;

exports[`Manifest examples validateLength: .a { width: validateLength(20px); } 1`] = `
".a {
  width: 20px;
}"
`;

exports[`Manifest examples validateRatio: .a { aspect-ratio: validateRatio("16/9"); } 1`] = `
".a {
  aspect-ratio: 16 / 9;
}"
`;

exports[`Manifest examples validateRatio: .a { aspect-ratio: validateRatio(1.5); } 1`] = `
".a {
  aspect-ratio: 1.5;
}"
`;

exports[`Manifest examples validateRatio: .a { aspect-ratio: validateRatio(var(--ratio)); } 1`] = `
".a {
  aspect-ratio: var(--ratio);
}"
`;

exports[`Manifest examples validateScissors: .a { content: "#{validateScissors(12px)}"; } 1`] = `
".a {
  content: "12px";
}"
`;

exports[`Manifest warnings breakpoint warns: .a { @include breakpoint("medium") { color: red; } } 1`] = `
"@media (width: 768px) {
  .a {
    color: red;
  }
}"
`;

exports[`Manifest warnings container-query warns: .title { @include container-query(400px) { color: red; } } 1`] = `
"@container (width: 400px) {
  .title {
    color: red;
  }
}"
`;

exports[`Manifest warnings fillNulls warns: .a { margin: fillNulls(1px null 3px null, $seperation: space 1`] = `
".a {
  margin: 1px 0 3px 0;
}"
`;

exports[`Manifest warnings gradient warns: .a { @include gradient(red); } 1`] = `
".a {
  background-image: linear-gradient(red);
}"
`;

exports[`Manifest warnings gradientValue warns: .a { background-image: gradientValue(red); } 1`] = `
".a {
  background-image: linear-gradient(red);
}"
`;

exports[`Manifest warnings remove warns: .a { @include remove("medium"); } 1`] = `
"@media (width: 768px) {
  .a {
    display: none;
  }
}"
`;

exports[`Manifest warnings text-gradient warns: .a { @include text-gradient(red); } 1`] = `
".a {
  background: linear-gradient(red);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  color: transparent;
}
@media (forced-colors: active) {
  .a {
    -webkit-text-fill-color: revert;
    color: revert;
    background-image: none;
  }
}"
`;
